<resources>
    <string name="app_name">ListViewAdapter</string>
    <string name="add">add</string>
    <string name="name_TextView">Name</string>
    <string name="age_TextView">Age</string>
    <string name="gender_TextView">Gender</string>
    <string name="reset_button">Reset</string>
    <string name="reset">Reset</string>
    <string name="remove_button">Remove</string>
    <string name="tools_text">Text</string>
</resources>
