<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/margin"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/name_TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name_TextView"
            android:textColor="@android:color/holo_blue_dark"
            android:textSize="@dimen/textSize"/>

        <EditText
            android:id="@+id/name-Edit_Text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin"
            tools:text="Text" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/age_TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/age_TextView"
            android:textColor="@android:color/holo_blue_dark"
            android:textSize="@dimen/textSize"/>

        <EditText
            android:id="@+id/age-Edit_Text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@android:dimen/app_icon_size"
            tools:text="Text" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/gender_TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gender_TextView"
            android:textColor="@android:color/holo_blue_dark"
            android:textSize="@dimen/textSize"/>

        <EditText
            android:id="@+id/gender-Edit_Text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin"
            tools:text="Text" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">

    <Button
        android:id="@+id/add_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/textSize"
        android:background="@color/colorPrimary"
        android:text="@string/add"
        android:layout_marginLeft="@dimen/margin"
        android:layout_marginTop="@dimen/margin"
        android:layout_marginRight="@dimen/margin"
        android:layout_weight="0.5"
        android:layout_gravity="center" />

        <Button
           android:id="@+id/reset_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/textSize"
            android:layout_marginTop="@dimen/margin"
            android:layout_marginRight="@dimen/margin"
            android:background="@color/colorPrimary"
            android:text="@string/reset"
            android:layout_weight="0.5"
            android:layout_gravity="center" />



    </LinearLayout>
    <ListView
        android:id="@android:id/list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/general_list_activity_margin" />

</LinearLayout>